fix: discussion page showing horizontal scroll on iOS (#3821)

--- a/framework/core/less/common/scaffolding.less
+++ b/framework/core/less/common/scaffolding.less
@@ -6,6 +6,13 @@
   }
 }
 
+// Fix to prevent horizontal scrolling bug on iOS
+@media @phone {
+  html {
+    overflow-x: hidden;
+  }
+}
+
 body {
   background: var(--body-bg);
   color: var(--text-color);
